--- a/menu-1.html
+++ b/menu-1.html
@@ -81,12 +81,77 @@
 
                 </div>
 
+
+        <!-- PLATS -->
+                
                 <div class="services">
                     <h2>PLATS</h2>
+                    <div class="menu-cards">
+                        <div class="menu-texts">
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <p>Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div class="prix">
+                            <p><strong>40€</strong></p>
+                        </div>
+                    </div>
+
+                    <div class="menu-cards">
+                        <div class="menu-texts">
+                            <h3>Magret de canard</h3>
+                            <p>Et parmentier de pommes de terre</p>
+                        </div>
+                        <div class="prix">
+                            <p><strong>35€</strong></p>
+                        </div>
+                    </div>
+
+                    <div class="menu-cards">
+                        <div class="menu-texts">
+                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <p>Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="prix">
+                            <p><strong>44€</strong></p>
+                        </div>
+                    </div>
                 </div>
 
+
+        <!-- DESSERTS -->
+   
                 <div class="services">
                     <h2>DESSERTS</h2>
+                    <div class="menu-cards">
+                        <div class="menu-texts">
+                            <h3>Pétales de violettes glacés</h3>
+                            <p>Et purée de noisettes</p>
+                        </div>
+                        <div class="prix">
+                            <p><strong>18€</strong></p>
+                        </div>
+                    </div>
+                
+
+                    <div class="menu-cards">
+                        <div class="menu-texts">
+                            <h3>Fondant au chocolat</h3>
+                            <p>Revisité</p>
+                        </div>
+                        <div class="prix">
+                            <p><strong>22€</strong></p>
+                        </div>
+                    </div>
+
+                    <div class="menu-cards">
+                        <div class="menu-texts">
+                            <h3>Millefeuille croustillant</h3>
+                            <p>Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div class="prix">
+                            <p><strong>23€</strong></p>
+                        </div>
+                    </div>
                 </div>
 
 
