--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 
 
-                    <a class="cards" href="#">
+                    <a class="cards" href="menu-2.html">
                         <p class="new">Nouveau</p>
                         <img src="images/restaurants/Medium/la_note_enchantee.jpg" alt="La note enchantée">
                         <div class="text">
@@ -129,7 +129,7 @@
                         </div>
                     </a>
 
-                    <a class="cards" href="#">
+                    <a class="cards" href="menu-3.html">
                         <img src="images/restaurants/Medium/a_la_francaise.jpg" alt="A la française">
                         <div class="text">
                             
@@ -145,7 +145,7 @@
                         </div>
                     </a>
 
-                    <a class="cards" href="#">
+                    <a class="cards" href="menu-4.html">
                         <img src="images/restaurants/Medium/le_delice_des_sens.jpg" alt="Le délice des sens">
                         <div class="text">
                             <div>
