--- a/menu-2.html
+++ b/menu-2.html
@@ -37,7 +37,7 @@
             <article class="menu">
 
                 <div class="nom-du-menu">
-                    <h1>La palette du goût</h1>
+                    <h1>La note enchantée</h1>
                     <div class="heart">
                         <span class="fa-solid fa-heart fa-2x full"></span>
                         <span class="fa-regular fa-heart fa-2x"></span>
@@ -51,8 +51,8 @@
                     <h2>ENTRÉES</h2>
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Fricassée d'escargot</h3>
-                            <p>Au piment d'Espelette</p>
+                            <h3>Ravioles de foie gras</h3>
+                            <p>Accompagnés de leur crème à la truffe</p>
                         </div>
                         <div class="prix">
                             <p><strong>25€</strong></p>
@@ -61,8 +61,8 @@
 
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire</p>
+                            <h3>Caviar osciètre</h3>
+                            <p>Sur blini à la farine de blé noir</p>
                         </div>
                         <div class="prix">
                             <p><strong>35€</strong></p>
@@ -71,11 +71,21 @@
                     
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Oeuf au plat</h3>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <h3>Homard et espuma de potiron</h3>
+                            <p>Mariné aux zestes d'orange</p>
                         </div>
                         <div class="prix">
                             <p><strong>20€</strong></p>
+                        </div>
+                    </div>
+
+                    <div class="menu-cards">
+                        <div class="menu-texts">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="prix">
+                            <p><strong>35€</strong></p>
                         </div>
                     </div>
 
@@ -88,8 +98,8 @@
                     <h2>PLATS</h2>
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Filet de boeuf aux herbes</h3>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <h3>Noix de coquilles Saint-Jacques</h3>
+                            <p>Sur lit de purée de céleri-rave</p>
                         </div>
                         <div class="prix">
                             <p><strong>40€</strong></p>
@@ -98,8 +108,8 @@
 
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Parmentier de queue de boeuf</h3>
-                            <p>À la truffe noire sur sa purée de panais</p>
+                            <h3>Langoustine poêlée</h3>
+                            <p>Purée de patate douce</p>
                         </div>
                         <div class="prix">
                             <p><strong>35€</strong></p>
@@ -108,8 +118,8 @@
 
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Filet de turbot</h3>
-                            <p>Aux agrumes</p>
+                            <h3>Mijoté de queue de boeuf </h3>
+                            <p>Et riz sauvage aux zestes de citron</p>
                         </div>
                         <div class="prix">
                             <p><strong>44€</strong></p>
@@ -124,8 +134,8 @@
                     <h2>DESSERTS</h2>
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Paris-Brest</h3>
-                            <p>Revisité</p>
+                            <h3>Macaron noisette et chocolat</h3>
+                            <p>Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="prix">
                             <p><strong>18€</strong></p>
@@ -135,8 +145,8 @@
 
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Macaron au chocolat d'exception</h3>
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <h3>Baba au rhum revisité</h3>
+                            <p>Avec son coulis de citron</p>
                         </div>
                         <div class="prix">
                             <p><strong>22€</strong></p>
@@ -145,8 +155,8 @@
 
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Mousse au chocolat </h3>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <h3>Tarte au citron meringuée</h3>
+                            <p>Déstructurée</p>
                         </div>
                         <div class="prix">
                             <p><strong>23€</strong></p>
