--- a/menu-4.html
+++ b/menu-4.html
@@ -37,7 +37,7 @@
             <article class="menu">
 
                 <div class="nom-du-menu">
-                    <h1>La palette du goût</h1>
+                    <h1>Le délice des sens</h1>
                     <div class="heart">
                         <span class="fa-solid fa-heart fa-2x full"></span>
                         <span class="fa-regular fa-heart fa-2x"></span>
@@ -51,8 +51,8 @@
                     <h2>ENTRÉES</h2>
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Fricassée d'escargot</h3>
-                            <p>Au piment d'Espelette</p>
+                            <h3>Tartare de thon</h3>
+                            <p>Assaisonné au yuzu</p>
                         </div>
                         <div class="prix">
                             <p><strong>25€</strong></p>
@@ -61,8 +61,8 @@
 
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire</p>
+                            <h3>Bouchée de homard croustillant</h3>
+                            <p>Et sa farandole de petits légumes</p>
                         </div>
                         <div class="prix">
                             <p><strong>35€</strong></p>
@@ -71,8 +71,8 @@
                     
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Oeuf au plat</h3>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <h3>Velouté de cèpes</h3>
+                            <p>Aux truffes</p>
                         </div>
                         <div class="prix">
                             <p><strong>20€</strong></p>
@@ -88,8 +88,8 @@
                     <h2>PLATS</h2>
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Filet de boeuf aux herbes</h3>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <h3>Poulet rôti aux herbes de Provence</h3>
+                            <p>Et sa crème de truffe</p>
                         </div>
                         <div class="prix">
                             <p><strong>40€</strong></p>
@@ -98,8 +98,8 @@
 
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Parmentier de queue de boeuf</h3>
-                            <p>À la truffe noire sur sa purée de panais</p>
+                            <h3>Langouste rôtie</h3>
+                            <p>Et ses légumes de saison</p>
                         </div>
                         <div class="prix">
                             <p><strong>35€</strong></p>
@@ -108,8 +108,8 @@
 
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Filet de turbot</h3>
-                            <p>Aux agrumes</p>
+                            <h3>Côte de boeuf Angus</h3>
+                            <p>Et sa purée de panais</p>
                         </div>
                         <div class="prix">
                             <p><strong>44€</strong></p>
@@ -124,8 +124,8 @@
                     <h2>DESSERTS</h2>
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Paris-Brest</h3>
-                            <p>Revisité</p>
+                            <h3>Farandole de desserts</h3>
+                            <p>Du chef</p>
                         </div>
                         <div class="prix">
                             <p><strong>18€</strong></p>
@@ -135,8 +135,8 @@
 
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Macaron au chocolat d'exception</h3>
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <h3>Crème brulée</h3>
+                            <p>Revisitée</p>
                         </div>
                         <div class="prix">
                             <p><strong>22€</strong></p>
@@ -145,8 +145,8 @@
 
                     <div class="menu-cards">
                         <div class="menu-texts">
-                            <h3>Mousse au chocolat </h3>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <h3>Tiramisu </h3>
+                            <p>À la noisette</p>
                         </div>
                         <div class="prix">
                             <p><strong>23€</strong></p>
