Pages des restaurants terminés

--- a/Restaurant-1.html
+++ b/Restaurant-1.html
@@ -29,7 +29,7 @@
         <!-- BANNIERE -->
 
             <section class="Banner">
-                <img src="images\restaurants\Medium\a_la_francaise.jpg" alt="Menu A la française">
+                <img src="images\restaurants\Large\la_palette_du_gout.jpg" alt="Restaurant La palette du goût">
             </section>
 
 
