--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <body>
 
             <!-- LOADER -->
-<!--                     
+                    
             <div class="loader">
                 <div class="line t1"></div>
                 <div class="line t2"></div>
                 <div class="line t3"></div>
-            </div> -->
+            </div>
         
 
             <!-- HEADER -->
