--- a/Restaurant-1.html
+++ b/Restaurant-1.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a1f66860f6.js" crossorigin="anonymous"></script>
-        <title>My Food - La palette du goût</title>
+        <title>Oh My Food - La palette du goût</title>
     </head>
 
     <body>
@@ -20,8 +20,8 @@
         <!-- HEADER -->
 
         <header>
-            <a href="index.html"><span class="fa-solid fa-arrow-left fa-2x"></span></a>
-            <img src="images\logo\ohmyfood.png" alt="Oh My Food"> 
+            <a href="index.html" title="retour à la page d'accueil"><span class="fa-solid fa-arrow-left fa-2x"></span></a>
+            <img src="images/logo/ohmyfood.png" alt="Oh My Food"> 
         </header>
 
         <main>
@@ -29,7 +29,7 @@
         <!-- BANNIERE -->
 
             <section class="Banner">
-                <img src="images\restaurants\Large\la_palette_du_gout.jpg" alt="Restaurant La palette du goût">
+                <img src="images/restaurants/Large/la_palette_du_gout.jpg" alt="Restaurant La palette du goût">
             </section>
 
 
