--- a/Restaurant-3.html
+++ b/Restaurant-3.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a1f66860f6.js" crossorigin="anonymous"></script>
-        <title>My Food - À la française</title>
+        <title>Oh My Food - À la française</title>
     </head>
 
     <body>
