Modification des adresse relatives

--- a/Restaurant-2.html
+++ b/Restaurant-2.html
@@ -21,7 +21,7 @@
 
         <header>
             <a href="index.html"><span class="fa-solid fa-arrow-left fa-2x"></span></a>
-            <img src="images\logo\ohmyfood.png" alt="Oh My Food"> 
+            <img src="images/logo/ohmyfood.png" alt="Oh My Food"> 
         </header>
 
         <main>
@@ -29,7 +29,7 @@
         <!-- BANNIERE -->
 
             <section class="Banner">
-                <img src="images\restaurants\Large\la_note_enchantee.jpg" alt="Restaurant La note enchantée">
+                <img src="images/restaurants/Large/la_note_enchantee.jpg" alt="Restaurant La note enchantée">
             </section>
 
 
