--- a/Restaurant-4.html
+++ b/Restaurant-4.html
@@ -21,7 +21,7 @@
 
         <header>
             <a href="index.html"><span class="fa-solid fa-arrow-left fa-2x"></span></a>
-            <img src="images\logo\ohmyfood.png" alt="Oh My Food"> 
+            <img src="images/logo/ohmyfood.png" alt="Oh My Food"> 
         </header>
 
         <main>
@@ -29,7 +29,7 @@
         <!-- BANNIERE -->
 
             <section class="Banner">
-                <img src="images\restaurants\Large\le_delice_des_sens.jpg" alt="Restaurant Le délice des sens">
+                <img src="images/restaurants/Large/le_delice_des_sens.jpg" alt="Restaurant Le délice des sens">
             </section>
 
 
