--- a/Restaurant-4.html
+++ b/Restaurant-4.html
@@ -40,7 +40,7 @@
                 <div class="Menu__Title">
                     <h1>Le délice des sens</h1>
                     <div class="heart">
-                        <span class="fa-solid fa-heart fa-2x full"></span>
+                        <span class="fa-solid fa-heart fa-2x"></span>
                         <span class="fa-regular fa-heart fa-2x"></span>
                     </div>
                 </div>
