--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <p>Ménilmontant</p>
                             </div>
                             <div class="heart">
-                                <span class="fa-solid fa-heart fa-2x full"></span>
+                                <span class="fa-solid fa-heart fa-2x"></span>
                                 <span class="fa-regular fa-heart fa-2x"></span>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                                 <p>Charonne</p>
                             </div>
                             <div class="heart">
-                                <span class="fa-solid fa-heart fa-2x full"></span>
+                                <span class="fa-solid fa-heart fa-2x"></span>
                                 <span class="fa-regular fa-heart fa-2x"></span>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                             </div>
                         
                             <div class="heart">
-                                <span class="fa-solid fa-heart fa-2x full"></span>
+                                <span class="fa-solid fa-heart fa-2x"></span>
                                 <span class="fa-regular fa-heart fa-2x"></span>
                             </div>
                         </div>
@@ -154,7 +154,7 @@
                                 <p>Folie-Méricourt</p>
                             </div>
                             <div class="heart">
-                                <span class="fa-solid fa-heart fa-2x full"></span>
+                                <span class="fa-solid fa-heart fa-2x"></span>
                                 <span class="fa-regular fa-heart fa-2x"></span>
                             </div>
                         </div>
